Adding angular resource and some services

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -9,12 +9,13 @@
     <!-- SPELLS -->
     <script src="resources/js/libs/angular.js"></script>
     <script src="resources/js/libs/angular-route.js"></script>
+    <script src="resources/js/libs/angular-resource.js"></script>
     <!-- APPLICATION -->
     <script src="resources/js/Application.js"></script>
     <!-- CONTROLLERS -->
     <script src="resources/js/controllers/IndexController.js"></script>
     <!-- SERVICES -->
-    <!--<script src="resources/js/services/DataConverter.js"></script>-->
+    <script src="resources/js/services/Movie.js"></script>
 
 
 </head>
