--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -3,17 +3,22 @@
 <head>
     <!-- SCROLLS -->
     <!-- load bootstrap and fontawesome via CDN -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- Latest compiled and minified JavaScript -->
     <link rel="stylesheet" href="resources/css/stylesheet.css">
-
+    <link rel="stylesheet" href="resources/css/angular-ui.css">
     <!-- SPELLS -->
     <script src="resources/js/libs/angular.js"></script>
+    <script src="resources/js/libs/angular-ui.js"></script>
+    <script src="resources/js/libs/ui-bootstrap.js"></script>
+    <script src="resources/js/libs/ui-bootstrap-tpls.js"></script>
     <script src="resources/js/libs/angular-route.js"></script>
     <script src="resources/js/libs/angular-resource.js"></script>
     <!-- APPLICATION -->
     <script src="resources/js/Application.js"></script>
     <!-- CONTROLLERS -->
     <script src="resources/js/controllers/IndexController.js"></script>
+    <script src="resources/js/controllers/MovieController.js"></script>
     <!-- SERVICES -->
     <script src="resources/js/services/Movie.js"></script>
 
@@ -35,7 +40,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#/">Home</a></li>
-                <li><a href="#/Movies">Movies</a></li>
+                <li><a href="#/movies">Movies</a></li>
                 <li><a href="#/Categories">Categories</a></li>
             </ul>
         </div><!--/.nav-collapse -->
