Adding Form for saving new movies, showing validation errors

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -21,6 +21,7 @@
     <script src="resources/js/controllers/MovieController.js"></script>
     <!-- SERVICES -->
     <script src="resources/js/services/Movie.js"></script>
+    <script src="resources/js/services/Category.js"></script>
 
 
 </head>
