--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -19,9 +19,11 @@
     <!-- CONTROLLERS -->
     <script src="resources/js/controllers/IndexController.js"></script>
     <script src="resources/js/controllers/MovieController.js"></script>
+    <script src="resources/js/controllers/HallController.js"></script>
     <!-- SERVICES -->
     <script src="resources/js/services/Movie.js"></script>
     <script src="resources/js/services/Category.js"></script>
+    <script src="resources/js/services/Hall.js"></script>
 
 
 </head>
@@ -42,7 +44,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="#/">Home</a></li>
                 <li><a href="#/movies">Movies</a></li>
-                <li><a href="#/Categories">Categories</a></li>
+                <li><a href="#/categories">Categories</a></li>
+                <li><a href="#/halls">Halls</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
