Adding basic category handling

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -20,6 +20,7 @@
     <script src="resources/js/controllers/IndexController.js"></script>
     <script src="resources/js/controllers/MovieController.js"></script>
     <script src="resources/js/controllers/HallController.js"></script>
+    <script src="resources/js/controllers/CategoryController.js"></script>
     <!-- SERVICES -->
     <script src="resources/js/services/Movie.js"></script>
     <script src="resources/js/services/Category.js"></script>
