basic handling for shows

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -21,10 +21,12 @@
     <script src="resources/js/controllers/MovieController.js"></script>
     <script src="resources/js/controllers/HallController.js"></script>
     <script src="resources/js/controllers/CategoryController.js"></script>
+    <script src="resources/js/controllers/ShowingController.js"></script>
     <!-- SERVICES -->
     <script src="resources/js/services/Movie.js"></script>
     <script src="resources/js/services/Category.js"></script>
     <script src="resources/js/services/Hall.js"></script>
+    <script src="resources/js/services/Showing.js"></script>
 
 
 </head>
@@ -47,6 +49,7 @@
                 <li><a href="#/movies">Movies</a></li>
                 <li><a href="#/categories">Categories</a></li>
                 <li><a href="#/halls">Halls</a></li>
+                <li><a href="#/showings">Showings</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
