Change frontend project structure, now it is divided per feature.

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -5,28 +5,28 @@
     <!-- load bootstrap and fontawesome via CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!-- Latest compiled and minified JavaScript -->
-    <link rel="stylesheet" href="resources/css/stylesheet.css">
-    <link rel="stylesheet" href="resources/css/angular-ui.css">
+    <link rel="stylesheet" href="styles/stylesheet.css">
+    <link rel="stylesheet" href="styles/angular-ui.css">
     <!-- SPELLS -->
-    <script src="resources/js/libs/angular.js"></script>
-    <script src="resources/js/libs/angular-ui.js"></script>
-    <script src="resources/js/libs/ui-bootstrap.js"></script>
-    <script src="resources/js/libs/ui-bootstrap-tpls.js"></script>
-    <script src="resources/js/libs/angular-route.js"></script>
-    <script src="resources/js/libs/angular-resource.js"></script>
+    <script src="libs/angular.js"></script>
+    <script src="libs/angular-ui.js"></script>
+    <script src="libs/ui-bootstrap.js"></script>
+    <script src="libs/ui-bootstrap-tpls.js"></script>
+    <script src="libs/angular-route.js"></script>
+    <script src="libs/angular-resource.js"></script>
     <!-- APPLICATION -->
-    <script src="resources/js/Application.js"></script>
+    <script src="Application.js"></script>
     <!-- CONTROLLERS -->
-    <script src="resources/js/controllers/IndexController.js"></script>
-    <script src="resources/js/controllers/MovieController.js"></script>
-    <script src="resources/js/controllers/HallController.js"></script>
-    <script src="resources/js/controllers/CategoryController.js"></script>
-    <script src="resources/js/controllers/ShowingController.js"></script>
+    <script src="index/IndexController.js"></script>
+    <script src="movies/MovieController.js"></script>
+    <script src="halls/HallController.js"></script>
+    <script src="categories/CategoryController.js"></script>
+    <script src="showings/ShowingController.js"></script>
     <!-- SERVICES -->
-    <script src="resources/js/services/Movie.js"></script>
-    <script src="resources/js/services/Category.js"></script>
-    <script src="resources/js/services/Hall.js"></script>
-    <script src="resources/js/services/Showing.js"></script>
+    <script src="movies/Movie.js"></script>
+    <script src="categories/Category.js"></script>
+    <script src="halls/Hall.js"></script>
+    <script src="showings/Showing.js"></script>
 
 
 </head>
