--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/stylesheet.css">
     <link rel="stylesheet" href="styles/angular-ui.css">
     <!-- SPELLS -->
+    <script src="libs/jquery.js"></script>
     <script src="libs/angular.js"></script>
     <script src="libs/angular-ui.js"></script>
     <script src="libs/ui-bootstrap.js"></script>
@@ -22,6 +23,9 @@
     <script src="halls/HallController.js"></script>
     <script src="categories/CategoryController.js"></script>
     <script src="showings/ShowingController.js"></script>
+    <script src="showings/showingDetailController.js"></script>
+    <script src="reservation/ReservationController.js"></script>
+    <script src="reservation/ReservationRoutes.js"></script>
     <!-- SERVICES -->
     <script src="movies/Movie.js"></script>
     <script src="categories/Category.js"></script>
