Introducing sass support for gulp task runner, first implementation of reservation page

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -4,9 +4,7 @@
     <!-- SCROLLS -->
     <!-- load bootstrap and fontawesome via CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <!-- Latest compiled and minified JavaScript -->
-    <link rel="stylesheet" href="styles/stylesheet.css">
-    <link rel="stylesheet" href="styles/angular-ui.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- SPELLS -->
     <script src="libs/jquery.js"></script>
     <script src="libs/angular.js"></script>
@@ -26,6 +24,9 @@
     <script src="showings/showingDetailController.js"></script>
     <script src="reservation/ReservationController.js"></script>
     <script src="reservation/ReservationRoutes.js"></script>
+    <script src="reservation/SeatReservationController.js"></script>
+    <script src="reservation/rangeFilter.js"></script>
+
     <!-- SERVICES -->
     <script src="movies/Movie.js"></script>
     <script src="categories/Category.js"></script>
@@ -54,6 +55,7 @@
                 <li><a href="#/categories">Categories</a></li>
                 <li><a href="#/halls">Halls</a></li>
                 <li><a href="#/showings">Showings</a></li>
+                <li><a href="#/reservation">Make a reservation</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
