Basic implementation of reservation flow

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -26,6 +26,7 @@
     <script src="reservation/ReservationRoutes.js"></script>
     <script src="reservation/SeatReservationController.js"></script>
     <script src="reservation/rangeFilter.js"></script>
+    <script src="reservation/Reservation.js"></script>
 
     <!-- SERVICES -->
     <script src="movies/Movie.js"></script>
