Initial implementation of finalizing reservation

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -27,6 +27,8 @@
     <script src="reservation/SeatReservationController.js"></script>
     <script src="reservation/rangeFilter.js"></script>
     <script src="reservation/Reservation.js"></script>
+    <script src="reservation/summation/SummationController.js"></script>
+    <script src="reservation/FinalizeReservationService.js"></script>
 
     <!-- SERVICES -->
     <script src="movies/Movie.js"></script>
