--- a/src/main/webapp/reservation/summation/summationModal.html
+++ b/src/main/webapp/reservation/summation/summationModal.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<h3>
+    <button ng-click="close()" class="btn btn-danger">Usuń</button>
+</h3>
