Making reservation works

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,24 +16,12 @@
     <!-- APPLICATION -->
     <script src="Application.js"></script>
     <!--ALL-->
-    <script src="categories/Category.js"></script>
-<script src="categories/CategoryController.js"></script>
-    <script src="halls/Hall.js"></script>
-<script src="halls/HallController.js"></script>
-    <script src="index/IndexController.js"></script>
-    <script src="movies/Movie.js"></script>
-<script src="movies/MovieController.js"></script>
-    <script src="reservation/FinalizeReservationService.js"></script>
-<script src="reservation/Reservation.js"></script>
-<script src="reservation/ReservationController.js"></script>
-<script src="reservation/ReservationRoutes.js"></script>
-<script src="reservation/SeatReservationController.js"></script>
-<script src="reservation/SeatResource.js"></script>
-<script src="reservation/rangeFilter.js"></script>
-<script src="reservation/summation/SummationController.js"></script>
-    <script src="showings/Showing.js"></script>
-<script src="showings/ShowingController.js"></script>
-<script src="showings/showingDetailController.js"></script>
+    <!-- include:js(categories/**/*.js) -->
+    <!-- include:js(halls/**/*.js) -->
+    <!-- include:js(index/**/*.js) -->
+    <!-- include:js(movies/**/*.js) -->
+    <!-- include:js(reservation/**/*.js) -->
+    <!-- include:js(showings/**/*.js) -->
 </head>
 <body>
 
